# pigro

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: README.md  _coverpage.md  _sidebar.md  index.html
docs/walkthrough/: README.md  _sidebar.md  adhoc_optimizations.md  basic_analysis.md  caching.md  call_once.md  comparisons.md  dependencies.md  extra_laziness.md  facade.md  final_design.md  ideas.md  reactivity_all_the_way_down.md  simplified_new_design.md  single_cache.md  single_evaluations.md  syntactic_sugar.md  syntactic_sugar_redesign.md
src/pigro/: apply.h  bind_tuple.h  compressed_tuple.h  concepts.h  empty_object.h  forward_like.h  fwd_capture.h  lazy.h  overload.h  pack_algorithms.h  partition.h  recursive.h  recursive_overload.h  regular_void.h  to_tuple.h  tuple_algorithms.h  uncapture.h  utils.h
tests/: CMakeLists.txt  apply.test.cpp  bind_tuple.test.cpp  compressed_tuple.test.cpp  lazy.test.cpp  overload.test.cpp  pack_algorithms.test.cpp  partition.test.cpp  recursive.test.cpp  recursive_overload.test.cpp  regular_void.test.cpp  tests.cpp  to_tuple.test.cpp  tuple_algorithms.test.cpp  uncapture.test.cpp  utils.test.cpp
